--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
 
     <title>React App</title>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
@@ -44,7 +45,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
+    <script src="..\node_modules\flowbite\dist\flowbite.min.js"></script>
   </body>
 </html>
